# Rust-by-example

./: README.md
My-Note/: .taurignore  README.md  bun.lockb  db.js  package.json
My-Note/src/: App.css  App.jsx  notesStore.js
My-Note/src-tauri/: .gitignore  Cargo.toml  key.txt  sqlite3.db  sqlite3.db-shm  sqlite3.db-wal  tauri.conf.json
My-Note/src-tauri/icons/: icon.icns
My-Note/src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
just-rust/: Cargo.toml  data.txt
just-rust/src/: guide_rust.txt  main copy 10.rs  main copy 11.rs  main copy 12.rs  main copy 13.rs  main copy 14.rs  main copy 15.rs  main copy 17.rs  main copy 18.rs  main copy 19.rs  main copy 2.rs  main copy 20.rs  main copy 21.rs  main copy 23.rs  main copy 24.rs  main copy 25.rs  main copy 26.rs  main copy 27.rs  main copy 28.rs  main copy 29.rs  main copy 3.rs  main copy 30.rs  main copy 31.rs  main copy 32.rs  main copy 33.rs  main copy 34.rs  main copy 4.rs  main copy 5.rs  main copy 6.rs  main copy 7.rs  main copy 8.rs  main copy 9.rs  main copy.rs  main.rs
