[package]
name = "Cred-note"
version = "0.1.1"
description = "A Tauri App for secure credentials storing."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

async-std = "1.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-async-std", "tls-native-tls", "sqlite", "chrono"] }

rand = "0.8.5"
rsa = "0.9.7"
crypter = "0.2.1"
base64 = "0.22.1"

